<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".Mine.PageActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/my_page"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/page_portrait"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/girl"
        app:layout_constraintBottom_toTopOf="@+id/page_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/page_nickname"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/page_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/page_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/ic_register"
        android:text="@string/my_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toEndOf="@+id/page_portrait"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/page_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="192dp">

        <View
            android:id="@+id/relative"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/page_post"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignRight="@+id/relative"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_page_left"
            android:text="@string/page_post"

            android:textSize="20sp" />

        <Button
            android:id="@+id/page_favorites"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/relative"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_page_right"
            android:text="@string/page_favorites"
            android:textSize="20sp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/page_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_below="@+id/page_post"
            android:layout_alignBottom="@id/page_post"
            android:layout_alignParentBottom="true"
            android:background="@color/white" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>