<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BoardActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/upperButton"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/board"
                                    android:textSize="30sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <Button
                                    android:id="@+id/board_add"
                                    android:layout_width="28dp"
                                    android:layout_height="33dp"
                                    android:background="@drawable/ic_baseline_add_circle_outline_24"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@id/board_search"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <Button
                                    android:id="@+id/board_search"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:background="@drawable/ic_search"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"  />



                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <LinearLayout
                            android:id="@+id/top_navigation"
                            android:layout_width="match_parent"
                            android:layout_height="50dp">

                                <Button
                                    android:id="@+id/board_message"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/board_message"
                                    android:textSize="20sp" />

                                <Button
                                    android:id="@+id/board_organization"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="@string/board_organization"
                                    android:textSize="20sp" />

                        </LinearLayout>


                </LinearLayout>

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/bottom_navigation" />


        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/white"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/menu_navigation" />


</RelativeLayout>